# swf-testbed

./: .gitignore  .markdownlint.json  CLAUDE-toplevel.md  CLAUDE.md  GEMINI.md  README.md  current_issue.md  docker-compose.yml  install.sh  next_steps.md  pyproject.toml  report_system_status.py  run_all_tests.py  run_all_tests.sh  run_tests.py  run_tests.sh  setup.sh  setup_env.sh  supervisord.conf  test_agent_communication.py  testbed_run_all.sh
.github/workflows/: publish-to-gpr.yml
config/: ddm_endpoints.json
docs/: AI-ASSISTANT-GUIDANCE.md  README-old.md  README.md  architecture.md  architecture_and_design_choices.md  automated_testpypi_publishing.md  development.md  github_packages_publishing_procedure.md  installation.md  monitor.md  operations.md  packaging_and_distribution.md  publishing_to_testpypi.md  quick-start.md  sse-streaming.md  status_update_2025-09-10.md  workflow_example.md
example_agents/: README.md  base_agent.py  daq_simulator.py  daq_workflow_example.smk  example_daqsim_agent.py  example_data_agent.py  example_processing_agent.py  my_script.sh  remote_sse_receiver.py  remote_sse_sender.py  requirements.txt  test_heartbeat.py
src/swf_testbed_cli/: main.py
tests/: conftest.py  ddm_endpoints.json  panda_queues.json  test_inject.py  test_main.py
